projects/instavote/dev/results-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: results
  namespace: instavote
spec: 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 
      maxUnavailable: 1
  revisionHistoryLimit: 4
  paused: false
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      role: results
    matchExpressions:
      - {key: version, operator: In, values: [v1, v2, v3, v4, v5, latest]}
  template:
    metadata:
      name: results
      labels:
        app: node
        role: results
        version: latest 
    spec:
      containers:
        - name: app
          image: schoolofdevops/vote-result:latest
          ports:
            - containerPort: 80
              protocol: TCP
