projects/instavote/dev/results-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: results 
  labels: 
    role: results
spec:
  selector:
    role: results
  ports:
    - port: 81
      targetPort: 80
      nodePort: 30001
  type: NodePort
#  externalIPs:
#    - 192.168.121.110
#    - 192.168.121.111
#    - 192.168.121.112
