projects/instavote/dev/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    role: vote
spec:
  selector:
    role: vote
  ports:
    - port: 82
      targetPort: 80
      nodePort: 30000
  type: NodePort
 #  externalIPs:
 #    - 192.168.121.110 
 #    - 192.168.121.111 
 #    - 192.168.121.112
